[package]
name = "task3-exec-flow-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
may = "0.3.51"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
pretty_assertions = "1.4"
